--- a/components/Map.module.css
+++ b/components/Map.module.css
@@ -36,3 +36,9 @@
     font-size: 16px;
     margin-top: 5px;
 }
+
+@media only screen and (max-width: 768px) {
+    .map {
+        margin-bottom: 20px;
+    }
+}
